# homelab-sentinel

./: .env.example  LICENSE  Makefile  README.md  custom-telegram.py  deploy.sh  homelab-sentinel.service  homelab-sentinel.yaml.example  homelab-sentinel.yaml.minimal  notify-ban.py  ossec-snippet.conf  pyproject.toml  requirements-dev.txt  requirements.txt  telegram-commander.py
ossec/: ossec-snippets.conf
sentinel/: __init__.py  ban_state.py  bitcoin.py  commands.py  config.py  firewall.py  sanitize.py  security.py  system.py  telegram.py  validate.py  wazuh.py
sentinel/addons/: __init__.py  bitcoin.py
tests/: conftest.py  test_bitcoin_addon.py  test_custom_telegram.py  test_notify_ban.py  test_sanitize.py  test_sentinel.py  test_telegram_commander.py
wazuh/: README.md  generate_rules.py  local_rules.xml.example  ossec-active-response.xml.example
