[project]
name = "homelab-sentinel"
version = "0.1.0"
requires-python = ">=3.12"

# ── Ruff (linter + formatter) ───────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (modern Python idioms)
    "S",   # flake8-bandit (security)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "S603",  # subprocess call with shell=False — intentional throughout
    "S604",  # subprocess call with shell=True — we use getoutput intentionally
    "S605",  # subprocess with shell — system admin tool, shell pipelines intentional
    "S607",  # partial executable path — we trust the server PATH
    "S113",  # requests timeout — we set timeouts everywhere already
    "S501",  # verify=False — local Wazuh/LND/mempool use self-signed certs
    "S108",  # temp file usage — intentional lockfile path
    "S110",  # try-except-pass — intentional for optional system readings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]  # skip security warnings in test code
# Top-level scripts use sys.path.insert before imports
"telegram-commander.py" = ["E402"]
"custom-telegram.py" = ["E402"]
"notify-ban.py" = ["E402"]

# ── Mypy (type checker) ─────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

# Top-level scripts are not packages — tell mypy about them
[[tool.mypy.overrides]]
module = [
    "telegram_commander",
    "custom_telegram",
    "notify_ban",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyotp"
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
